...
          </Text>

          <TouchableOpacity 
            style={styles.button} 
            onPress={() => navigation.navigate('Onboarding')}
          >
            <Text style={styles.buttonText}>Start Journey</Text>
          </TouchableOpacity>

          {/* ACTIVE LOGIN BUTTON */}
          <TouchableOpacity 
            onPress={() => navigation.navigate('Login')} // <--- NOW ACTIVE
            style={{padding: 10}}
          >
            <Text style={styles.loginText}>
              Already have an account? <Text style={{fontFamily:'Poppins_700Bold', color: COLORS.accent}}>Log In</Text>
            </Text>
          </TouchableOpacity>
        </View>
      </View>
      </SafeAreaView>
    </ImageBackground>
...
